# Demo_UD_ESP32_S3_Touch_AMOLED_1.75C

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  sdkconfig.defaults
build-codex2/: .bin_timestamp  .ninja_deps  .ninja_log  CPackConfig.cmake  CPackSourceConfig.cmake  app-flash_args.in  bootloader-flash_args  config.env  flash_app_args  flash_args.in  flash_project_args  flasher_args.json  flasher_args.json.in  kconfigs.in  kconfigs_projbuild.in  ldgen_libraries  ldgen_libraries.in  partition-table-flash_args  project_description.json  x509_crt_bundle.S
build-codex2/bootloader/: .bin_timestamp  .ninja_deps  .ninja_log  build.ninja  config.env  kconfigs.in  kconfigs_projbuild.in  project_description.json
build-codex2/config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
build-codex2/gdbinit/: gdbinit  symbols
cloud/: __init__.py
cloud/api/: __init__.py  (+2 more)
docs/: cloud_streaming_setup.md  design.md  idea.md  spec.md
implementation-plan/: README.md
main/: CMakeLists.txt  Kconfig.projbuild  audio_segment_recorder.c  audio_segment_recorder.h  audio_streamer.c  audio_streamer.h  cloud_ws.c  cloud_ws.h  idf_component.yml  main.c  offline_buffer.c  offline_buffer.h  protocol.h  runtime_config.c  runtime_config.h  wifi_manager.c  wifi_manager.h
project_timeline/: 01_startup_spiffs_audio_init.md  02_lvgl_recording_controls.md  03_wav_file_writer.md  04_capture_record_state_machine.md  05_playback_integration.md  06_storage_limits_and_errors.md  07_build_and_manual_qa.md  08_screen_off_recording.md  09_global_display_auto_off.md  README.md
(+137 files in other folders)
